# SLDRDemo-ESP32-MatterThread

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SLDRDemoProjectConfig.h  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32c6  sdkconfig.defaults.esp32h2
main/: CMakeLists.txt  SLDRDemo.c  SLDRDemo.cpp  SLDRDemo_driver.cpp  SLDRDemo_driver.h  SLDRESPMatterUtils.cpp  SLDRESPMatterUtils.h  idf_component.yml
tools/: gen_dep_versions_header.py
